floated the checkbox and the subtodo text so that they do not overlap each other. The internal styles need to be moved to the external style sheet. Temporary fix

--- a/Interactive-TODO/public/stylesheets/style.css
+++ b/Interactive-TODO/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-html, body { margin: 0; padding: 0; color: #3d3d3d; background-color: #EEE; font-family: Lato; }
+html, body { margin: 0; padding: 0; color: #3d3d4d; background-color: #EEE; font-family: Lato; float: ;;; }
 
 
 h1 { font-family: Inconsolata; border-bottom: 1px solid #aaa; margin-bottom: 0; }
@@ -25,6 +25,7 @@ div#items {
 div#items h1 {
     text-transform: capitalize;
 }
+    float: left;
 
 form#newGroup {
    position:absolute;
@@ -153,8 +154,8 @@ ul li button:hover {
 }
 
 #subtodoList label input{
-    display : inline;
     margin-right : 2em;
+    float : left;
 }
 
 #lists ::-webkit-input-placeholder {
